# pytools

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/code_md/: __init__.py  __main__.py  app.py  cli.py  clipboard.py  detect.py  fence.py
tests/: test_app.py  test_cli.py  test_fence.py
